testsuite/poke.pkl/cast-array-diag-7.pk
/* { dg-do compile } */

var a = [1,2] as int[2 + 1]; /* { dg-error "" } */
